<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">420 Store</string>
    <!--Hint-->
    <string name="hint_pass">Mật khẩu</string>
    <string name="hint_re_enter_pass">Nhập lại mật khẩu</string>
    <string name="hint_email">Địa chỉ Email</string>
    <!--Text-->
    <string name="txt_sign_in">Đăng Nhập</string>
    <string name="txt_sign_up">Đăng Ký</string>
    <string name="txt_no_account">Bạn chưa có tài khoản ?</string>
    <string name="txt_have_account">Bạn có tài khoản !</string>
    <string name="txt_welcome">Chào mừng quay trở lại! </string>
    <string name="txt_sign_up_baner">Đăng ký ngay! </string>
    <!--Menu string-->
    <string name="menu_home_page">Trang chủ</string>
    <string name="menu_category">Danh mục</string>
    <string name="menu_account">Tài khoản</string>
    <string name="menu_setting">Cài Đặt</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_notification">Thông báo</string>
    <string name="menu_search">Tìm kiếm</string>
    <!--Setting-->
    <string name="setting_sign_out">Đăng xuất</string>
    <string name="setting_title" tools:ignore="ExtraTranslation">Cài Đặt</string>

    <!--List item-->
    <string-array name="listItemSetting">
        <item>Thông tin tài khoản</item>
        <item>Thông tin tài khoản</item>
        <item>Thông tin tài khoản</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1003858493882103</string>
    <string name="fb_login_protocol_scheme">fb1003858493882103</string>
    <string name="txtInformationUser">Thông tin tài khoản</string>
    <string name="txt_full_name"><![CDATA[Họ & Tên]]></string>
    <string name="txt_add_full_name">Thêm họ và tên</string>
    <string name="txt_nickname">Nickname</string>
    <string name="txt_add_nickname">Thêm nickname</string>
    <string name="txt_gender">Giới tính</string>
    <string name="txt_add_gender">Thêm giới tính</string>
    <string name="txt_birthday">Ngày sinh</string>
    <string name="txt_add_birthday">Thêm ngày sinh</string>
    <string name="txt_phone_number">Số điện thoại</string>
    <string name="txt_add_phone_number">Thêm số điện thoại</string>
    <string name="txt_email">Email</string>
    <string name="txt_add_email">Thêm email</string>
    <string name="txt_password_change">Đổi mật khẩu</string>
    <string name="txt_password_reset">Quên mật khẩu</string>
    <string name="account_Information">Thông tin tài khoản</string>
    <string name="hint_new_password">Mật khẩu mới</string>
    <string name="field_empty">Không được để trống trường này!</string>
    <string name="field_do_not_match">Mật khẩu không khớp!</string>
    <string name="reAuthentication">Mật khẩu hiện tại không đúng!</string>
    <string name="PasswordChangeFailed">Đổi mật khẩu không thành công!</string>
    <string name="sendEmailFailed">Gửi email đặt lại mật khẩu không thành công!</string>
    <string name="close">Đóng</string>
    <string name="successful">Thành công</string>
    <string name="error">Lỗi</string>
    <string name="sendEmailSuccess">Gửi email đặt lại mật khẩu thành công. Vui lòng kiểm tra email!</string>
    <string name="btn_save_changes">Lưu thay đổi</string>
    <string name="edit_information">Chỉnh sửa thông tin</string>
    <string name="save_successful">Lưu thông tin thành công!</string>
    <string name="save_failed">Lưu thông tin thất bại!</string>
    <string name="txt_phone_verify">Xác thực</string>
    <string name="txt_code_verify">Nhập mã xác thực</string>
    <string name="txt_new_email">Nhập email mới...</string>
    <string name="txt_current_password">Nhập mật khẩu hiện tại ...</string>
    <string name="txt_current_email">Nhập email hiện tại...</string>
    <string name="txt_change_email">Đổi Email</string>

</resources>