<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@drawable/bg_corner_dialog"    android:orientation="vertical"    android:padding="20sp"    android:layout_margin="10sp">    <TextView        android:id="@+id/txt_title_add_infor"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/bg_title_account_dialog"        android:gravity="center"        android:text="@string/txt_password_change"        android:paddingTop="10dp"        android:paddingBottom="10dp"        android:textSize="25sp"        android:textStyle="bold"/>    <TextView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:text="Vui lòng nhập đầy dủ thông tin!"        android:gravity="center"        android:textStyle="italic"        android:textSize="16sp"        android:layout_marginTop="10sp"        android:layout_marginLeft="10sp"        android:layout_marginRight="10sp"/>    <EditText        android:id="@+id/edt_old_password"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="10sp"        android:imeOptions="actionNext"        android:inputType="textPassword"        android:background="@drawable/bg_white_corner_edt_account"        android:hint="@string/hint_pass"        android:minHeight="48dp"        android:padding="10sp" />    <EditText        android:id="@+id/edt_new_password"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="10sp"        android:imeOptions="actionNext"        android:inputType="textPassword"        android:background="@drawable/bg_white_corner_edt_account"        android:hint="@string/hint_new_password"        android:minHeight="48dp"        android:padding="10sp" />    <EditText        android:id="@+id/edt_re_enter_password"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="10sp"        android:background="@drawable/bg_white_corner_edt_account"        android:hint="@string/hint_re_enter_pass"        android:imeOptions="actionDone"        android:inputType="textPassword"        android:minHeight="48dp"        android:padding="10sp" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <Button            android:id="@+id/btnYes"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginRight="10sp"            android:layout_weight="1"            android:background="@drawable/bg_corner_button_account_dialog"            android:text="Yes"            android:textSize="16sp"/>        <Button            android:id="@+id/btnNo"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:layout_marginLeft="10sp"            android:textSize="16sp"            android:text="No"            android:alpha="0.5"            android:background="@drawable/bg_corner_button_account_dialog"/>    </LinearLayout></LinearLayout>