<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/layoutCustomizeDialog"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:layout_margin="20dp"    android:padding="20dp"    xmlns:app="http://schemas.android.com/apk/res-auto">    <androidx.constraintlayout.widget.ConstraintLayout        android:id="@+id/layoutDialog"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/bg_corner_dialog_error"        app:layout_constraintTop_toTopOf="parent">        <TextView            android:id="@+id/txtTitle_dialog"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@drawable/bg_title_error_dialog"            android:padding="10dp"            android:textColor="@color/white"            android:text="@string/error"            android:textSize="18sp"            android:textStyle="bold"            app:layout_constraintTop_toTopOf="parent"/>        <ImageView            android:layout_width="25dp"            android:layout_height="25dp"            android:layout_marginEnd="10dp"            android:contentDescription="@string/app_name"            app:layout_constraintBottom_toBottomOf="@id/txtTitle_dialog"            app:layout_constraintEnd_toEndOf="parent"            android:src="@drawable/ic_baseline_error_outline_24"            app:layout_constraintTop_toTopOf="@+id/txtTitle_dialog"            app:tint="@color/white" />        <TextView            android:id="@+id/txtMessage_dialog"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="18dp"            android:layout_marginEnd="20dp"            android:layout_marginStart="20dp"            android:layout_marginBottom="40dp"            android:textColor="@color/black"            android:textSize="16sp"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintTop_toBottomOf="@id/txtTitle_dialog"/>    </androidx.constraintlayout.widget.ConstraintLayout>    <Button        android:id="@+id/btn_error_dialog"        android:layout_width="match_parent"        android:layout_height="40dp"        android:layout_marginStart="40dp"        android:layout_marginEnd="40dp"        android:textColor="@color/white"        android:text="@string/close"        android:background="@drawable/bg_corner_button_error_dialog"        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"        app:layout_constraintTop_toBottomOf="@id/layoutDialog"/></androidx.constraintlayout.widget.ConstraintLayout>